--- a/css/index.less
+++ b/css/index.less
@@ -148,6 +148,7 @@ ul li{
                            padding-top: 10px;
                            position: absolute;
                            clip:rect(0px,46px,59px,0px);
+                           transition: 0.3s;
                        }
                     //    background: url(../images/arrow.png) no-repeat ;
                    }       
@@ -179,7 +180,7 @@ ul li{
                     // animation-name: Animatingleft;
                     // animation-duration: 2s;
                 }
-                .right1{
+                .img1{
                     // animation: Animatingleft 1s ease 2s 1;
                     // /*调用已定义好的动画Animatingleft，全程运行时间1S，进入的速度曲线为ease，只播放一次*/
                     // -webkit-animation: Animatingleft 1s ease 2s 1;
@@ -194,7 +195,7 @@ ul li{
                     -o-animation: Animatingleft 1s ease 1;
                     -moz-animation: Animatingleft 1s ease 1;
                 }
-                .right2{
+                .img2{
                     animation: Animatingleft 1s ease 0.1s 1;
                     /*调用已定义好的动画Animatingleft，全程运行时间1S，进入的速度曲线为ease，只播放一次*/
                     -webkit-animation: Animatingleft 1s ease 0.1s 1;
@@ -202,7 +203,7 @@ ul li{
                     -o-animation: Animatingleft 1s ease 0.1s 1;
                     -moz-animation: Animatingleft 1s ease 0.1s 1;
                 }
-                 .right3{
+                 .img3{
                     animation: Animatingleft 1s ease 0.2s 1;
                     /*调用已定义好的动画Animatingleft，全程运行时间1S，进入的速度曲线为ease，只播放一次*/
                     -webkit-animation: Animatingleft 1s ease 0.2s 1;
@@ -211,20 +212,100 @@ ul li{
                     -moz-animation: Animatingleft 1s ease 0.2s 1;
                 }
             }
+            .btn-about{
+                display: block;
+                top: 120px;
+                width: 45px;
+                height: 45px;
+                margin: 0 auto;
+                position: relative;
+               .img-about{
+                   display: block;
+                   width: 110px;
+                   height: 100px;
+                   padding-top: 10px;
+                   position: absolute;
+                   clip:rect(59px,46px,118px,0px);
+                   transition:0.3s; 
+                //    clip:rect(0px,46px,59px,0px);
+                       }
+            }
         }
         // display: none;
     }
     // 关于我页面部分结束
 
     // 工作页面部分开始
-     .works{
+     #part3{
         width: 100%;
-        background: yellow;
+        height: 100%;
+        background: #27AE60;
         .section-works{
-            width: 100%;
-            height: 750px;
+            width: 960px;
+            height: 100%;
+            margin: 0 auto;
+            // background: red;
+            .works-item{
+                width: 300px;
+                height: 45px;
+                position: relative;
+                float: left;
+                margin: 10px;
+                top: 130px;
+                padding-top: 135px;
+                background: url(../images/works/91zaojia.jpg) no-repeat;
+                -webkit-transform: translate3d(0, 0, 0);
+                -moz-transform: translate3d(0, 0, 0);
+                transform: translate3d(0, 0, 0);
+                /* 设置动画，animation:动画名称 动画播放时长单位秒或微秒 动画播放的速度曲线linear为匀速 动画播放次数infinite为循环播放; */
+                -webkit-animation: play 3s ease-in-out infinite;
+                -moz-animation: play 3s ease-in-out infinite;
+                animation: play 3s ease-in-out infinite;
+                background-size: cover;
+                a{
+                    color: #DDEFFD;
+                    font-size: 22px;
+                    margin: 0 auto;
+                       display: block;
+                       height: 45px;
+                       font-weight: 700;
+                       line-height: 45px;
+                       background: #323232;
+                       width: 300px;
+                }
+             }
+             .item2{
+                 background: url(../images/works/shinedeliver.jpg) no-repeat;
+             }
+             .item3{
+                 background: url(../images/works/wenku.jpg) no-repeat;
+             }
+             .item4{
+                 background: url(../images/works/wxshop.jpg) no-repeat;
+             }
+             .item5{
+                 background: url(../images/works/yizaojia.jpg) no-repeat;
+             }
+             .btn-works{
+                 clear: both;
+                       display: block;
+                       width: 45px;
+                       height: 45px;
+                       margin: 0 auto;
+                       position: relative;
+                       top: 150px;
+                       .img-works{
+                           display: block;
+                           width: 110px;
+                           height: 100px;
+                           padding-top: 10px;
+                           position: absolute;
+                           clip:rect(0px,46px,59px,0px);
+                           transition: 0.3s;
+                       }
+                    //    background: url(../images/arrow.png) no-repeat ;
+                   }       
         }
-        //  display: none;
     }
     // 工作页面部分结束
     
@@ -393,3 +474,35 @@ ul li{
         }
 }
 // 个人首页左边图片动画效果结束
+// 图片旋转效果开始
+        @-webkit-keyframes play {
+            0% {
+                /*
+        水平翻转
+        */
+                -webkit-transform: rotateY(0deg);
+            }
+            100% {
+                /* 水平翻转 */
+                -webkit-transform: rotateY(360deg);
+            }
+        }
+        
+        @-moz-keyframes play {
+            0% {
+                -moz-transform: rotateY(0deg);
+            }
+            100% {
+                -moz-transform: rotateY(360deg);
+            }
+        }
+        
+        @keyframes play {
+            0% {
+                transform: rotateY(0deg);
+            }
+            100% {
+                transform: rotateY(360deg);
+            }
+        }
+// 图片旋转效果结束
